--- a/Plugins/3rdParty/MSHtmlEditorControl/HtmlEditorControl.resx
+++ b/Plugins/3rdParty/MSHtmlEditorControl/HtmlEditorControl.resx
@@ -464,6 +464,18 @@
   <data name="toolstripDocumentOpen.Text" xml:space="preserve">
     <value>&amp;Open</value>
   </data>
+  <data name="toolStripDocumentEditHTML.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
+  <data name="toolStripDocumentEditHTML.Size" type="System.Drawing.Size, System.Drawing">
+    <value>23, 20</value>
+  </data>
+  <data name="toolStripDocumentEditHTML.Text" xml:space="preserve">
+    <value>toolStripDocumentEditHTML</value>
+  </data>
+  <data name="toolStripDocumentEditHTML.ToolTipText" xml:space="preserve">
+    <value>Edit HTML</value>
+  </data>
   <data name="toolstripDocumentSave.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
   </data>
@@ -552,37 +564,37 @@
     <value>Magenta</value>
   </data>
   <data name="contextTableModify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>158, 22</value>
+    <value>157, 22</value>
   </data>
   <data name="contextTableModify.Text" xml:space="preserve">
     <value>Table Properties</value>
   </data>
   <data name="toolStripSeparator22.Size" type="System.Drawing.Size, System.Drawing">
-    <value>155, 6</value>
+    <value>154, 6</value>
   </data>
   <data name="contextTableInsertRow.Size" type="System.Drawing.Size, System.Drawing">
-    <value>158, 22</value>
+    <value>157, 22</value>
   </data>
   <data name="contextTableInsertRow.Text" xml:space="preserve">
     <value>Insert Row</value>
   </data>
   <data name="contextTableDeleteRow.Size" type="System.Drawing.Size, System.Drawing">
-    <value>158, 22</value>
+    <value>157, 22</value>
   </data>
   <data name="contextTableDeleteRow.Text" xml:space="preserve">
     <value>Delete Row</value>
   </data>
   <data name="toolStripSeparator23.Size" type="System.Drawing.Size, System.Drawing">
-    <value>155, 6</value>
+    <value>154, 6</value>
   </data>
   <data name="contextTableRowModify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>158, 22</value>
+    <value>157, 22</value>
   </data>
   <data name="contextTableRowModify.Text" xml:space="preserve">
     <value>Row Properties</value>
   </data>
   <data name="contextTableCellModify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>158, 22</value>
+    <value>157, 22</value>
   </data>
   <data name="contextTableCellModify.Text" xml:space="preserve">
     <value>Cell Properties</value>
@@ -591,13 +603,13 @@
     <value>Magenta</value>
   </data>
   <data name="contextTable.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 22</value>
+    <value>105, 22</value>
   </data>
   <data name="contextTable.Text" xml:space="preserve">
     <value>Table</value>
   </data>
   <data name="toolStripSeparator24.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 6</value>
+    <value>102, 6</value>
   </data>
   <data name="contextEditUndo.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
@@ -702,7 +714,7 @@
     <value>Delete</value>
   </data>
   <data name="contextEdit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 22</value>
+    <value>105, 22</value>
   </data>
   <data name="contextEdit.Text" xml:space="preserve">
     <value>Edit</value>
@@ -711,7 +723,7 @@
     <value>Magenta</value>
   </data>
   <data name="contextDocumentNew.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentNew.Text" xml:space="preserve">
     <value>New</value>
@@ -720,73 +732,82 @@
     <value>Magenta</value>
   </data>
   <data name="contextDocumentOpen.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentOpen.Text" xml:space="preserve">
     <value>Open</value>
+  </data>
+  <data name="contextDocumentEditHTML.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
+  <data name="contextDocumentEditHTML.Size" type="System.Drawing.Size, System.Drawing">
+    <value>134, 22</value>
+  </data>
+  <data name="contextDocumentEditHTML.Text" xml:space="preserve">
+    <value>Edit HTML</value>
   </data>
   <data name="contextDocumentSave.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
   </data>
   <data name="contextDocumentSave.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentSave.Text" xml:space="preserve">
     <value>Save As</value>
   </data>
   <data name="toolStripSeparator9.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 6</value>
+    <value>131, 6</value>
   </data>
   <data name="contextDocumentPrint.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
   </data>
   <data name="contextDocumentPrint.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentPrint.Text" xml:space="preserve">
     <value>Print</value>
   </data>
   <data name="toolStripSeparator10.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 6</value>
+    <value>131, 6</value>
   </data>
   <data name="contextDocumentToolbar.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentToolbar.Text" xml:space="preserve">
     <value>Toolbar</value>
   </data>
   <data name="contextDocumentScrollbar.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentScrollbar.Text" xml:space="preserve">
     <value>Scrollbar</value>
   </data>
   <data name="contextDocumentWordwrap.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentWordwrap.Text" xml:space="preserve">
     <value>Word Wrap</value>
   </data>
   <data name="contextDocumentOverwrite.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentOverwrite.Text" xml:space="preserve">
     <value>Overwrite</value>
   </data>
   <data name="contextDocumentHelp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>134, 22</value>
   </data>
   <data name="contextDocumentHelp.Text" xml:space="preserve">
     <value>Help</value>
   </data>
   <data name="contextDocument.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 22</value>
+    <value>105, 22</value>
   </data>
   <data name="contextDocument.Text" xml:space="preserve">
     <value>Document</value>
   </data>
   <data name="toolStripSeparator7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 6</value>
+    <value>102, 6</value>
   </data>
   <data name="contextFormatFontDialog.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
@@ -942,7 +963,7 @@
     <value>Bullet List</value>
   </data>
   <data name="contextFormat.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 22</value>
+    <value>105, 22</value>
   </data>
   <data name="contextFormat.Text" xml:space="preserve">
     <value>Format</value>
@@ -984,7 +1005,7 @@
     <value>Right</value>
   </data>
   <data name="contextJustify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 22</value>
+    <value>105, 22</value>
   </data>
   <data name="contextJustify.Text" xml:space="preserve">
     <value>Justify</value>
@@ -1035,13 +1056,13 @@
     <value>Formatted</value>
   </data>
   <data name="contextFormatting.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 22</value>
+    <value>105, 22</value>
   </data>
   <data name="contextFormatting.Text" xml:space="preserve">
     <value>Styles</value>
   </data>
   <data name="toolStripSeparator8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 6</value>
+    <value>102, 6</value>
   </data>
   <data name="contextInsertLine.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
@@ -1095,13 +1116,13 @@
     <value>Table</value>
   </data>
   <data name="contextInsert.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 22</value>
+    <value>105, 22</value>
   </data>
   <data name="contextInsert.Text" xml:space="preserve">
     <value>Insert</value>
   </data>
   <data name="contextEditor.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 198</value>
+    <value>106, 176</value>
   </data>
   <data name="&gt;&gt;contextEditor.Name" xml:space="preserve">
     <value>contextEditor</value>
@@ -1113,7 +1134,7 @@
     <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>184</value>
+    <value>108</value>
   </metadata>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
     <value>675, 243</value>
@@ -1302,6 +1323,12 @@
     <value>contextDocumentOverwrite</value>
   </data>
   <data name="&gt;&gt;contextDocumentOverwrite.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;contextDocumentHelp.Name" xml:space="preserve">
+    <value>contextDocumentHelp</value>
+  </data>
+  <data name="&gt;&gt;contextDocumentHelp.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;toolStripSeparator7.Name" xml:space="preserve">
@@ -1682,6 +1709,12 @@
   <data name="&gt;&gt;contextDocumentOpen.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;contextDocumentEditHTML.Name" xml:space="preserve">
+    <value>contextDocumentEditHTML</value>
+  </data>
+  <data name="&gt;&gt;contextDocumentEditHTML.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;contextDocumentSave.Name" xml:space="preserve">
     <value>contextDocumentSave</value>
   </data>
@@ -1808,11 +1841,11 @@
   <data name="&gt;&gt;contextInsertTable.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;contextDocumentHelp.Name" xml:space="preserve">
-    <value>contextDocumentHelp</value>
+  <data name="&gt;&gt;toolStripDocumentEditHTML.Name" xml:space="preserve">
+    <value>toolStripDocumentEditHTML</value>
   </data>
-  <data name="&gt;&gt;contextDocumentHelp.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;toolStripDocumentEditHTML.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>HtmlEditorControl</value>
