--- a/Plugins/3rdParty/MSHtmlEditorControl/Properties/Resources.resx
+++ b/Plugins/3rdParty/MSHtmlEditorControl/Properties/Resources.resx
@@ -121,14 +121,14 @@
   <data name="ToolbarTabInsert" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarTabInsert.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ToolbarFileSave" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarFileSave.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ToolbarTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarTable.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolbarFind" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarFind.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ToolbarFontNormal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarFontNormal.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolbarPaste" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarPaste.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -142,8 +142,17 @@
   <data name="ToolbarListOrdered" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarListOrdered.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToolbarRedo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarRedo.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ToolbarFontDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarFontDown.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToolbarFileNew" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarFileNew.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToolbarTextColor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarTextColor.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToolbarFontUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarFontUp.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolbarEdit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarEdit.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -153,9 +162,6 @@
   </data>
   <data name="ToolbarWebLink" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarWebLink.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ToolbarImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarImage.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolbarFileOpen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarFileOpen.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -184,9 +190,6 @@
   <data name="ToolbarCopy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarCopy.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToolbarFileSave" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarFileSave.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ToolbarBold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarBold.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -196,8 +199,8 @@
   <data name="ToolbarJustifyCenter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarJustifyCenter.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToolbarFontDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarFontDown.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ToolbarRedo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarRedo.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolbarUnderline" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarUnderline.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -205,16 +208,16 @@
   <data name="HtmlEditor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HtmlEditor.ico;System.Drawing.Icon, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToolbarFontUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarFontUp.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ToolbarImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarImage.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolbarTabRemove" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToolbarTabRemove.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToolbarTextColor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarTextColor.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ToolbarFontNormal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarFontNormal.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.3600.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToolbarFileNew" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToolbarFileNew.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ToolbarEditHtml" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarEditHtml.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
