--- a/Plugins/3rdParty/MSHtmlEditorControl/HtmlEditorControl.resx
+++ b/Plugins/3rdParty/MSHtmlEditorControl/HtmlEditorControl.resx
@@ -603,13 +603,13 @@
     <value>Magenta</value>
   </data>
   <data name="contextTable.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 22</value>
+    <value>127, 22</value>
   </data>
   <data name="contextTable.Text" xml:space="preserve">
     <value>Table</value>
   </data>
   <data name="toolStripSeparator24.Size" type="System.Drawing.Size, System.Drawing">
-    <value>102, 6</value>
+    <value>124, 6</value>
   </data>
   <data name="contextEditUndo.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
@@ -713,8 +713,20 @@
   <data name="contextEditDelete.Text" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="toolStripSeparator25.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 6</value>
+  </data>
+  <data name="contextDocumentEditHTML.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
+  <data name="contextDocumentEditHTML.Size" type="System.Drawing.Size, System.Drawing">
+    <value>183, 22</value>
+  </data>
+  <data name="contextDocumentEditHTML.Text" xml:space="preserve">
+    <value>Edit HTML</value>
+  </data>
   <data name="contextEdit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 22</value>
+    <value>127, 22</value>
   </data>
   <data name="contextEdit.Text" xml:space="preserve">
     <value>Edit</value>
@@ -723,7 +735,7 @@
     <value>Magenta</value>
   </data>
   <data name="contextDocumentNew.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentNew.Text" xml:space="preserve">
     <value>New</value>
@@ -732,82 +744,73 @@
     <value>Magenta</value>
   </data>
   <data name="contextDocumentOpen.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentOpen.Text" xml:space="preserve">
     <value>Open</value>
-  </data>
-  <data name="contextDocumentEditHTML.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
-    <value>Magenta</value>
-  </data>
-  <data name="contextDocumentEditHTML.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
-  </data>
-  <data name="contextDocumentEditHTML.Text" xml:space="preserve">
-    <value>Edit HTML</value>
   </data>
   <data name="contextDocumentSave.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
   </data>
   <data name="contextDocumentSave.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentSave.Text" xml:space="preserve">
     <value>Save As</value>
   </data>
   <data name="toolStripSeparator9.Size" type="System.Drawing.Size, System.Drawing">
-    <value>131, 6</value>
+    <value>149, 6</value>
   </data>
   <data name="contextDocumentPrint.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
   </data>
   <data name="contextDocumentPrint.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentPrint.Text" xml:space="preserve">
     <value>Print</value>
   </data>
   <data name="toolStripSeparator10.Size" type="System.Drawing.Size, System.Drawing">
-    <value>131, 6</value>
+    <value>149, 6</value>
   </data>
   <data name="contextDocumentToolbar.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentToolbar.Text" xml:space="preserve">
     <value>Toolbar</value>
   </data>
   <data name="contextDocumentScrollbar.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentScrollbar.Text" xml:space="preserve">
     <value>Scrollbar</value>
   </data>
   <data name="contextDocumentWordwrap.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentWordwrap.Text" xml:space="preserve">
     <value>Word Wrap</value>
   </data>
   <data name="contextDocumentOverwrite.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentOverwrite.Text" xml:space="preserve">
     <value>Overwrite</value>
   </data>
   <data name="contextDocumentHelp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="contextDocumentHelp.Text" xml:space="preserve">
     <value>Help</value>
   </data>
   <data name="contextDocument.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 22</value>
+    <value>127, 22</value>
   </data>
   <data name="contextDocument.Text" xml:space="preserve">
     <value>Document</value>
   </data>
   <data name="toolStripSeparator7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>102, 6</value>
+    <value>124, 6</value>
   </data>
   <data name="contextFormatFontDialog.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
@@ -963,7 +966,7 @@
     <value>Bullet List</value>
   </data>
   <data name="contextFormat.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 22</value>
+    <value>127, 22</value>
   </data>
   <data name="contextFormat.Text" xml:space="preserve">
     <value>Format</value>
@@ -1005,7 +1008,7 @@
     <value>Right</value>
   </data>
   <data name="contextJustify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 22</value>
+    <value>127, 22</value>
   </data>
   <data name="contextJustify.Text" xml:space="preserve">
     <value>Justify</value>
@@ -1056,13 +1059,13 @@
     <value>Formatted</value>
   </data>
   <data name="contextFormatting.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 22</value>
+    <value>127, 22</value>
   </data>
   <data name="contextFormatting.Text" xml:space="preserve">
     <value>Styles</value>
   </data>
   <data name="toolStripSeparator8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>102, 6</value>
+    <value>124, 6</value>
   </data>
   <data name="contextInsertLine.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
@@ -1116,13 +1119,13 @@
     <value>Table</value>
   </data>
   <data name="contextInsert.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 22</value>
+    <value>127, 22</value>
   </data>
   <data name="contextInsert.Text" xml:space="preserve">
     <value>Insert</value>
   </data>
   <data name="contextEditor.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 176</value>
+    <value>128, 198</value>
   </data>
   <data name="&gt;&gt;contextEditor.Name" xml:space="preserve">
     <value>contextEditor</value>
@@ -1134,7 +1137,7 @@
     <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>108</value>
+    <value>25</value>
   </metadata>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
     <value>675, 243</value>
@@ -1541,12 +1544,6 @@
   <data name="&gt;&gt;contextDocumentOpen.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;contextDocumentEditHTML.Name" xml:space="preserve">
-    <value>contextDocumentEditHTML</value>
-  </data>
-  <data name="&gt;&gt;contextDocumentEditHTML.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="&gt;&gt;contextDocumentSave.Name" xml:space="preserve">
     <value>contextDocumentSave</value>
   </data>
@@ -1846,6 +1843,18 @@
   </data>
   <data name="&gt;&gt;contextInsertTable.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;contextDocumentEditHTML.Name" xml:space="preserve">
+    <value>contextDocumentEditHTML</value>
+  </data>
+  <data name="&gt;&gt;contextDocumentEditHTML.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;toolStripSeparator25.Name" xml:space="preserve">
+    <value>toolStripSeparator25</value>
+  </data>
+  <data name="&gt;&gt;toolStripSeparator25.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>HtmlEditorControl</value>
